fix: Remove double border in groups

--- a/src/runtime/components/action-icon/action-icon.module.css
+++ b/src/runtime/components/action-icon/action-icon.module.css
@@ -119,7 +119,6 @@
 }
 
 .group {
-	--ai-border-width: 1px;
 	display: flex;
 
 	& :where(*) {
@@ -137,18 +136,17 @@
 			&:not(:only-child):first-child {
 				border-end-end-radius: 0;
 				border-start-end-radius: 0;
-				border-inline-end-width: calc(var(--ai-border-width) / 2);
 			}
 
 			&:not(:only-child):last-child {
 				border-end-start-radius: 0;
 				border-start-start-radius: 0;
-				border-inline-start-width: calc(var(--ai-border-width) / 2);
+				border-inline-start-width: 0;
 			}
 
 			&:not(:only-child):not(:first-child):not(:last-child) {
 				border-radius: 0;
-				border-inline-width: calc(var(--ai-border-width) / 2);
+				border-inline-start-width: 0;
 			}
 		}
 	}
@@ -161,19 +159,17 @@
 			&:not(:only-child):first-child {
 				border-end-start-radius: 0;
 				border-end-end-radius: 0;
-				border-bottom-width: calc(var(--ai-border-width) / 2);
 			}
 
 			&:not(:only-child):last-child {
 				border-start-start-radius: 0;
 				border-start-end-radius: 0;
-				border-top-width: calc(var(--ai-border-width) / 2);
+				border-top-width: 0;
 			}
 
 			&:not(:only-child):not(:first-child):not(:last-child) {
 				border-radius: 0;
-				border-bottom-width: calc(var(--ai-border-width) / 2);
-				border-top-width: calc(var(--ai-border-width) / 2);
+				border-top-width: 0;
 			}
 		}
 	}
