--- a/src/runtime/components/button/button.module.css
+++ b/src/runtime/components/button/button.module.css
@@ -192,7 +192,6 @@
 }
 
 .group {
-	--group-border-width: 1px;
 	display: flex;
 
 	&> :where(*):focus {
@@ -207,18 +206,17 @@
 			&:not(:only-child):first-child {
 				border-end-end-radius: 0;
 				border-start-end-radius: 0;
-				border-inline-end-width: calc(var(--group-border-width) / 2);
 			}
 
 			&:not(:only-child):last-child {
 				border-end-start-radius: 0;
 				border-start-start-radius: 0;
-				border-inline-start-width: calc(var(--group-border-width) / 2);
+				border-inline-start-width: 0;
 			}
 
 			&:not(:only-child):not(:first-child):not(:last-child) {
 				border-radius: 0;
-				border-inline-width: calc(var(--group-border-width) / 2);
+				border-inline-start-width: 0;
 			}
 		}
 	}
@@ -230,19 +228,17 @@
 			&:not(:only-child):first-child {
 				border-end-start-radius: 0;
 				border-end-end-radius: 0;
-				border-bottom-width: calc(var(--group-border-width) / 2);
 			}
 
 			&:not(:only-child):last-child {
 				border-start-start-radius: 0;
 				border-start-end-radius: 0;
-				border-top-width: calc(var(--group-border-width) / 2);
+				border-top-width: 0;
 			}
 
 			&:not(:only-child):not(:first-child):not(:last-child) {
 				border-radius: 0;
-				border-bottom-width: calc(var(--group-border-width) / 2);
-				border-top-width: calc(var(--group-border-width) / 2);
+				border-top-width: 0;
 			}
 		}
 	}
